--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f28e1c;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+svg.beer {
+    fill: white;
+    height: 20%;
+    width: 20%;
+    padding: 5%;
+}
+
+.submit {
+    background-color: blue;
+    border: none;
+    color: white;
+    font-size: 18px;
+}
+
+form {
+    background-color: midnightblue;
+    border-radius: 5px;
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+}
+
+select {
+    width: 80%;
 }
