--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,10 +16,10 @@
 .App-header {
   background-color: #f28e1c;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -40,25 +40,42 @@
 svg.beer {
     fill: white;
     height: 20%;
-    width: 20%;
-    padding: 5%;
+    width: 90%;
+    padding: 1%;
 }
 
 .submit {
-    background-color: blue;
+    background-color: #FFD700;
     border: none;
-    color: white;
+    color: midnightblue;
     font-size: 18px;
+    margin-top: 10%;
 }
 
+.formgroup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
 form {
     background-color: midnightblue;
     border-radius: 5px;
     padding: 10%;
     display: flex;
     flex-direction: column;
+    width: 80%;
+    font-family: 'Modak', cursive;
 }
 
 select {
-    width: 80%;
+    width: 90%;
+}
+
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around
 }
